--- a/Source/HomeAutomexWeb/HomeAutomex/HomeAutomex/Views/Account/Register.cshtml
+++ b/Source/HomeAutomexWeb/HomeAutomex/HomeAutomex/Views/Account/Register.cshtml
@@ -27,6 +27,10 @@
                 @Html.LabelFor(m => m.ConfirmPassword)
                 @Html.PasswordFor(m => m.ConfirmPassword)
             </li>
+            <li>
+                @Html.LabelFor(e => e.Nome)
+                @Html.TextBoxFor(e => e.Nome)
+            </li>
         </ol>
         <input type="submit" value="Register" />
     </fieldset>
