--- a/Source/HomeAutomexWeb/HomeAutomex/HomeAutomex/Views/Account/Register.cshtml
+++ b/Source/HomeAutomexWeb/HomeAutomex/HomeAutomex/Views/Account/Register.cshtml
@@ -5,7 +5,7 @@
 
 <hgroup class="title">
     <h1>@ViewBag.Title.</h1>
-    <h2>Create a new account.</h2>
+    <h2>Crie agora sua conta.</h2>
 </hgroup>
 
 @using (Html.BeginForm()) {
