--- a/Source/HomeAutomexWeb/HomeAutomex/HomeAutomex/Views/Shared/_Layout.cshtml
+++ b/Source/HomeAutomexWeb/HomeAutomex/HomeAutomex/Views/Shared/_Layout.cshtml
@@ -146,9 +146,9 @@
                     <b class="caret"></b>
                 </a>
                 <ul class="dropdown-menu">
-                    <li><a href="personal-info.html">APARTAMENTO</a></li>
-                    <li><a href="#">CASA DE PRAIA</a></li>
-                    <li><a href="#">RESIDÊNCIA</a></li>
+                    <li><a href="#">Apartamento</a></li>
+                    <li><a href="#">Casa de Praia</a></li>
+                    <li><a href="#">Residência</a></li>
               
                 </ul>
             </li>
