incluir residencia, esta pronto :D

--- a/Source/HomeAutomexWeb/HomeAutomex/HomeAutomex/Views/Shared/_Layout.cshtml
+++ b/Source/HomeAutomexWeb/HomeAutomex/HomeAutomex/Views/Shared/_Layout.cshtml
@@ -221,6 +221,7 @@
                 <ul class="submenu">
                    <li>   @Html.ActionLink("Ligados", "")</li>
                    <li>   @Html.ActionLink("Desligados", "")</li>
+                    <li>  @Html.ActionLink("Residencia", "RegistrarResidencia") </li>
                 </ul>
             </li>
             <li>
