--- a/Source/HomeAutomexWeb/HomeAutomex/HomeAutomex/Views/Residencia/Editar.cshtml
+++ b/Source/HomeAutomexWeb/HomeAutomex/HomeAutomex/Views/Residencia/Editar.cshtml
@@ -1,17 +1,18 @@
 ﻿@model HomeAutomex.Models.ResidenciaModel
 
 @{
-    ViewBag.Title = "RegistrarResidencia";
+    ViewBag.Title = "Editar";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
+<h2>Editar</h2>
 
 @using (Html.BeginForm()) {
     @Html.AntiForgeryToken()
     @Html.ValidationSummary(true)
 
     <fieldset>
-        <legend>Nova Residência</legend>
+        <legend>ResidenciaModel</legend>
 
         <div class="editor-label">
             @Html.LabelFor(model => model.Logradouro)
@@ -61,8 +62,16 @@
             @Html.ValidationMessageFor(model => model.Complemento)
         </div>
 
+        <div class="editor-label">
+            @Html.LabelFor(model => model.Chave)
+        </div>
+        <div class="editor-field">
+            @Html.EditorFor(model => model.Chave)
+            @Html.ValidationMessageFor(model => model.Chave)
+        </div>
+
         <p>
-            <input type="submit" value="Entrar" class="btn-glow primary login" />
+            <input type="submit" value="Save" />
         </p>
     </fieldset>
 }
