--- a/Source/HomeAutomexWeb/HomeAutomex/HomeAutomex/Views/Account/Register.cshtml
+++ b/Source/HomeAutomexWeb/HomeAutomex/HomeAutomex/Views/Account/Register.cshtml
@@ -13,7 +13,7 @@
     @Html.ValidationSummary()
 
     <fieldset>
-        <legend>Formulário de Registro</legend>
+        <legend>Registrar</legend>
         <ol>
             <li>
                 @Html.LabelFor(m => m.Login)
