--- a/Source/HomeAutomexWeb/HomeAutomex/HomeAutomex/Views/Residencia/Registrar.cshtml
+++ b/Source/HomeAutomexWeb/HomeAutomex/HomeAutomex/Views/Residencia/Registrar.cshtml
@@ -11,7 +11,7 @@
     @Html.ValidationSummary(true)
 
     <fieldset>
-        <legend>Nova Residência</legend>
+   <legend>Registrar</legend>
 
         <div class="editor-label">
             @Html.LabelFor(model => model.Logradouro)
@@ -62,7 +62,7 @@
         </div>
 
         <p>
-            <input type="submit" value="Entrar" class="btn-glow primary login" />
+            <input type="submit" value="Registrar" class="btn-glow primary login" />
         </p>
     </fieldset>
 }
