--- a/Source/HomeAutomexWeb/HomeAutomex/HomeAutomex/Views/Shared/_Layout.cshtml
+++ b/Source/HomeAutomexWeb/HomeAutomex/HomeAutomex/Views/Shared/_Layout.cshtml
@@ -197,7 +197,7 @@
                     <i class="icon-chevron-down"></i>
                 </a>
                 <ul class="submenu">
-                    <li>   @Html.ActionLink("Listar Usuários", "ListarUsuario")</li>
+                    <li>   @Html.ActionLink("Listar Usuários", "ListarUsuario", "Account")</li>
          
                 </ul>
             </li>
@@ -221,7 +221,8 @@
                 <ul class="submenu">
                    <li>   @Html.ActionLink("Ligados", "")</li>
                    <li>   @Html.ActionLink("Desligados", "")</li>
-                    <li>  @Html.ActionLink("Residencia", "RegistrarResidencia") </li>
+                   <li>  @Html.ActionLink("Residencia", "Listar") </li>
+                   <li>@Html.ActionLink("Modulo", "Listar", "Modulo")</li>
                 </ul>
             </li>
             <li>
@@ -231,7 +232,7 @@
                     <i class="icon-chevron-down"></i>
                 </a>
                 <ul class="submenu">
-                    <li>   @Html.ActionLink("Listar Usuários", "ListarUsuario")</li>
+                    <li>  #</li>
          
                 </ul>
             </li>
