--- a/Source/HomeAutomexWeb/HomeAutomex/HomeAutomex/Views/Residencia/Editar.cshtml
+++ b/Source/HomeAutomexWeb/HomeAutomex/HomeAutomex/Views/Residencia/Editar.cshtml
@@ -67,7 +67,7 @@
         </div>
 
         <p>
-            <input type="submit" value="Save" class="btn-glow primary login" />
+            <input type="submit" value="Editar" class="btn-glow primary login" />
         </p>
     </fieldset>
 }
