--- a/Source/HomeAutomexWeb/HomeAutomex/HomeAutomex/Views/Residencia/ListarResidencia.cshtml
+++ b/Source/HomeAutomexWeb/HomeAutomex/HomeAutomex/Views/Residencia/ListarResidencia.cshtml
@@ -1,16 +1,27 @@
 ﻿@model IEnumerable<HomeAutomex.Models.ResidenciaModel>
 
 @{
-    ViewBag.Title = "ListarResidencia";
+    ViewBag.Title = "Listar";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>ListarResidencia</h2>
+ <legend>Listar Residências</legend>
 
 <p>
-    @Html.ActionLink("Create New", "Create")
+    @Html.ActionLink("Criar nova", "RegistrarResidencia")
 </p>
-<table>
+@using (Ajax.BeginForm(new AjaxOptions { UpdateTargetId= "Grid", HttpMethod = "POST" }))
+{
+<div class="editor-label">
+    @Html.Label("Pesquisar")
+</div>
+<div class="editor-field">
+    @Html.Editor("pesquisa")
+    <input type="submit" value="Pesquisar" class="btn-glow primary login"/>
+</div>
+   <br />
+ 
+<table id="Grid" class="table table-bordered">
     <tr>
         <th>
             @Html.DisplayNameFor(model => model.Logradouro)
@@ -30,7 +41,9 @@
         <th>
             @Html.DisplayNameFor(model => model.Complemento)
         </th>
-        <th></th>
+        <th>
+            Opções
+        </th>
     </tr>
 
 @foreach (var item in Model) {
@@ -54,11 +67,11 @@
             @Html.DisplayFor(modelItem => item.Complemento)
         </td>
         <td>
-            @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
-            @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
-            @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
+            @Html.ActionLink("Editar", "EditarResidencia", new { chave = item.Chave }) |
+            @Html.ActionLink("Delete", "DeleteResidencia", new { chave = item.Chave })
         </td>
     </tr>
 }
 
 </table>
+}
