--- a/Source/HomeAutomexWeb/HomeAutomex/HomeAutomex/Views/Dispositivo/RegistrarDispositivo.cshtml
+++ b/Source/HomeAutomexWeb/HomeAutomex/HomeAutomex/Views/Dispositivo/RegistrarDispositivo.cshtml
@@ -11,8 +11,11 @@
 
     <fieldset>
         <legend>Registrar novo Dispositivo</legend>
+            <div class="editor-label">
+            @Html.LabelFor(model => model.PortaModulo)
+        </div>
         <div>
-         @Html.DropDownList("portaModulo",ViewBag.PortaModulo as List<SelectListItem>)
+         @Html.DropDownList("portaModulo",ViewBag.PortaModulo as List<SelectListItem>, new { @class="input" })
         </div>
         <br /> 
             
@@ -39,7 +42,7 @@
         <div class="editor-field">
             @Html.EditorFor(model => model.Status)
             @Html.ValidationMessageFor(model => model.Status)
-        </div>
+        </div><br />
 
        
 
