--- a/Source/HomeAutomexWeb/HomeAutomex/HomeAutomex/Views/Dispositivo/ListarDispositivo.cshtml
+++ b/Source/HomeAutomexWeb/HomeAutomex/HomeAutomex/Views/Dispositivo/ListarDispositivo.cshtml
@@ -8,7 +8,7 @@
 <legend>Listar Dispositivo</legend>
 
 <p>
-    @Html.ActionLink("Create New", "RegistrarDispositivo")
+    @Html.ActionLink("Criar novo", "RegistrarDispositivo")
 </p>
 @using (Ajax.BeginForm(new AjaxOptions { UpdateTargetId= "Grid", HttpMethod = "POST" }))
 {
