--- a/Source/HomeAutomexMobile/HomeAutomex/res/layout/activity_login.xml
+++ b/Source/HomeAutomexMobile/HomeAutomex/res/layout/activity_login.xml
@@ -6,6 +6,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
+    android:background="@drawable/back8"
     tools:context=".LoginActivity" >
 
     <EditText
@@ -27,7 +28,8 @@
         android:layout_above="@+id/editLogin"
         android:layout_alignLeft="@+id/editLogin"
         android:text="Login"
-        android:textAppearance="?android:attr/textAppearanceLarge" />
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:textColor="#fff" />
 
     <TextView
         android:id="@+id/textSenha"
@@ -36,7 +38,8 @@
         android:layout_above="@+id/editSenha"
         android:layout_alignLeft="@+id/editSenha"
         android:text="Senha"
-        android:textAppearance="?android:attr/textAppearanceLarge" />
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:textColor="#fff" />
 
     <EditText
         android:id="@+id/editLogin"
@@ -53,6 +56,9 @@
         android:layout_below="@+id/editSenha"
         android:layout_marginTop="28dp"
         android:layout_toRightOf="@+id/textSenha"
-        android:text="Login" />
+        android:background="@layout/layout_botoes"
+        android:text="Entrar"
+        android:textColor="#fff"
+        android:textSize="15sp"  />
 
 </RelativeLayout>
