--- a/Source/HomeAutomexMobile/HomeAutomex/res/layout/activity_residencias.xml
+++ b/Source/HomeAutomexMobile/HomeAutomex/res/layout/activity_residencias.xml
@@ -6,15 +6,18 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
+    android:background="@drawable/back3"
     tools:context=".ResidenciasActivity" >
 
      <TextView
-        android:id="@+id/textBoasVindas"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"
-        android:text="TextView" />
+         android:id="@+id/textBoasVindas"
+         android:layout_width="wrap_content"
+         android:layout_height="wrap_content"
+         android:layout_alignParentLeft="true"
+         android:layout_alignParentTop="true"
+         android:text="TextView"
+         android:textColor="#fff"
+         android:textSize="21sp" />
 
     <ListView
         android:id="@+id/listView1"
