--- a/Source/HomeAutomexMobile/HomeAutomex/res/layout/residencia_adapter_layout.xml
+++ b/Source/HomeAutomexMobile/HomeAutomex/res/layout/residencia_adapter_layout.xml
@@ -21,7 +21,9 @@
         android:layout_marginLeft="36dp"
         android:layout_marginTop="14dp"
         android:layout_toRightOf="@+id/imageView1"
-        android:text="TextView" />
+        android:text="TextView"
+        android:textColor="#fff"
+        android:textSize="19sp" />
 
     <TextView
         android:id="@+id/textBairro"
@@ -30,7 +32,9 @@
         android:layout_alignLeft="@+id/textResidencia"
         android:layout_below="@+id/textResidencia"
         android:layout_marginTop="16dp"
-        android:text="TextView" />
+        android:text="TextView"
+        android:textColor="#fff"
+        android:textSize="19sp" />
 
     <TextView
         android:id="@+id/textNumero"
@@ -39,6 +43,8 @@
         android:layout_alignBottom="@+id/imageView1"
         android:layout_alignLeft="@+id/textBairro"
         android:layout_marginBottom="20dp"
-        android:text="TextView" />
+        android:text="TextView"
+        android:textColor="#fff"
+        android:textSize="19sp" />
 
 </RelativeLayout>
