--- a/Source/HomeAutomexWeb/HomeAutomex/HomeAutomex/Views/Shared/_Layout.cshtml
+++ b/Source/HomeAutomexWeb/HomeAutomex/HomeAutomex/Views/Shared/_Layout.cshtml
@@ -18,6 +18,8 @@
     <!-- bootstrap -->
     <link href="~/css/bootstrap.css" rel="stylesheet" />
     <link href="~/css/bootstrap-overrides.css" rel="stylesheet" />
+    <link href="docs/lib/css/bootstrap.min.css" rel="stylesheet">
+    <link href="dist/css/bootstrap3/bootstrap-switch.css" rel="stylesheet">
 
     <!-- global styles -->
     <link href="~/css/elements.css" rel="stylesheet" />
@@ -281,6 +283,10 @@
     <script src="http://code.jquery.com/jquery-latest.js"></script>
     <script src="../Scripts/bootstrap.min.js"></script>
     <script src="../Scripts/theme.js"></script>
+    <script src="../docs/lib/js/jquery.min.js"></script>
+    <script src="../docs/lib/js/highlight.js"></script>
+    <script src="../dist/js/bootstrap-switch.js"></script>
+    <script src="../docs/index.js"></script>
 
          @Scripts.Render("~/bundles/jquery")
         @RenderSection("scripts", required: false)
