--- a/Source/HomeAutomexWeb/HomeAutomex/HomeAutomex/Views/PortaModulo/ListarPortaModulo.cshtml
+++ b/Source/HomeAutomexWeb/HomeAutomex/HomeAutomex/Views/PortaModulo/ListarPortaModulo.cshtml
@@ -7,7 +7,7 @@
 
 <legend>Listar Porta do Modulo</legend>
 <p>
-    @Html.ActionLink("Create New", "Create")
+    @Html.ActionLink("Criar novo", "RegistrarPortaModulo")
 </p>
 
 @using (Ajax.BeginForm(new AjaxOptions { UpdateTargetId= "Grid", HttpMethod = "POST" }))
